@@ -46,8 +46,8 @@ public class FieldUtilsTest {
     static final String SS = "ss";
     static final Integer I0 = Integer.valueOf(0);
     static final Integer I1 = Integer.valueOf(1);
-    static final Double D0 = new Double(0.0);
-    static final Double D1 = new Double(1.0);
+    static final Double D0 = Double.valueOf(0.0);
+    static final Double D1 = Double.valueOf(1.0);
 
     private PublicChild publicChild;
     private PubliclyShadowedChild publiclyShadowedChild;
@@ -919,7 +919,7 @@ public class FieldUtilsTest {
         }
         field = parentClass.getDeclaredField("d");
         try {
-            FieldUtils.writeField(field, publicChild, new Double(Double.MAX_VALUE));
+            FieldUtils.writeField(field, publicChild, Double.valueOf(Double.MAX_VALUE));
         } catch (IllegalAccessException e) {
             // pass
         }
@@ -937,8 +937,8 @@ public class FieldUtilsTest {
         FieldUtils.writeField(field, publicChild, Integer.valueOf(Integer.MAX_VALUE), true);
         assertEquals(Integer.valueOf(Integer.MAX_VALUE), field.get(publicChild));
         field = parentClass.getDeclaredField("d");
-        FieldUtils.writeField(field, publicChild, new Double(Double.MAX_VALUE), true);
-        assertEquals(new Double(Double.MAX_VALUE), field.get(publicChild));
+        FieldUtils.writeField(field, publicChild, Double.valueOf(Double.MAX_VALUE), true);
+        assertEquals(Double.valueOf(Double.MAX_VALUE), field.get(publicChild));
     }
 
     @Test
@@ -958,7 +958,7 @@ public class FieldUtilsTest {
             // pass
         }
         try {
-            FieldUtils.writeField(publicChild, "d", new Double(1.0));
+            FieldUtils.writeField(publicChild, "d", Double.valueOf(1.0));
             fail("Expected IllegalArgumentException");
         } catch (IllegalArgumentException e) {
             // pass
@@ -970,8 +970,8 @@ public class FieldUtilsTest {
         assertEquals(Boolean.FALSE, FieldUtils.readField(publiclyShadowedChild, "b"));
         FieldUtils.writeField(publiclyShadowedChild, "i", Integer.valueOf(0));
         assertEquals(Integer.valueOf(0), FieldUtils.readField(publiclyShadowedChild, "i"));
-        FieldUtils.writeField(publiclyShadowedChild, "d", new Double(0.0));
-        assertEquals(new Double(0.0), FieldUtils.readField(publiclyShadowedChild, "d"));
+        FieldUtils.writeField(publiclyShadowedChild, "d", Double.valueOf(0.0));
+        assertEquals(Double.valueOf(0.0), FieldUtils.readField(publiclyShadowedChild, "d"));
 
         FieldUtils.writeField(privatelyShadowedChild, "s", "S");
         assertEquals("S", FieldUtils.readField(privatelyShadowedChild, "s"));
@@ -988,7 +988,7 @@ public class FieldUtilsTest {
             // pass
         }
         try {
-            FieldUtils.writeField(privatelyShadowedChild, "d", new Double(1.0));
+            FieldUtils.writeField(privatelyShadowedChild, "d", Double.valueOf(1.0));
             fail("Expected IllegalArgumentException");
         } catch (IllegalArgumentException e) {
             // pass
@@ -1003,8 +1003,8 @@ public class FieldUtilsTest {
         assertEquals(Boolean.TRUE, FieldUtils.readField(publicChild, "b", true));
         FieldUtils.writeField(publicChild, "i", Integer.valueOf(1), true);
         assertEquals(Integer.valueOf(1), FieldUtils.readField(publicChild, "i", true));
-        FieldUtils.writeField(publicChild, "d", new Double(1.0), true);
-        assertEquals(new Double(1.0), FieldUtils.readField(publicChild, "d", true));
+        FieldUtils.writeField(publicChild, "d", Double.valueOf(1.0), true);
+        assertEquals(Double.valueOf(1.0), FieldUtils.readField(publicChild, "d", true));
 
         FieldUtils.writeField(publiclyShadowedChild, "s", "S", true);
         assertEquals("S", FieldUtils.readField(publiclyShadowedChild, "s", true));
@@ -1012,8 +1012,8 @@ public class FieldUtilsTest {
         assertEquals(Boolean.FALSE, FieldUtils.readField(publiclyShadowedChild, "b", true));
         FieldUtils.writeField(publiclyShadowedChild, "i", Integer.valueOf(0), true);
         assertEquals(Integer.valueOf(0), FieldUtils.readField(publiclyShadowedChild, "i", true));
-        FieldUtils.writeField(publiclyShadowedChild, "d", new Double(0.0), true);
-        assertEquals(new Double(0.0), FieldUtils.readField(publiclyShadowedChild, "d", true));
+        FieldUtils.writeField(publiclyShadowedChild, "d", Double.valueOf(0.0), true);
+        assertEquals(Double.valueOf(0.0), FieldUtils.readField(publiclyShadowedChild, "d", true));
 
         FieldUtils.writeField(privatelyShadowedChild, "s", "S", true);
         assertEquals("S", FieldUtils.readField(privatelyShadowedChild, "s", true));
@@ -1021,8 +1021,8 @@ public class FieldUtilsTest {
         assertEquals(Boolean.FALSE, FieldUtils.readField(privatelyShadowedChild, "b", true));
         FieldUtils.writeField(privatelyShadowedChild, "i", Integer.valueOf(0), true);
         assertEquals(Integer.valueOf(0), FieldUtils.readField(privatelyShadowedChild, "i", true));
-        FieldUtils.writeField(privatelyShadowedChild, "d", new Double(0.0), true);
-        assertEquals(new Double(0.0), FieldUtils.readField(privatelyShadowedChild, "d", true));
+        FieldUtils.writeField(privatelyShadowedChild, "d", Double.valueOf(0.0), true);
+        assertEquals(Double.valueOf(0.0), FieldUtils.readField(privatelyShadowedChild, "d", true));
     }
 
     @Test
@@ -1046,7 +1046,7 @@ public class FieldUtilsTest {
             // pass
         }
         try {
-            FieldUtils.writeDeclaredField(publicChild, "d", new Double(1.0));
+            FieldUtils.writeDeclaredField(publicChild, "d", Double.valueOf(1.0));
             fail("Expected IllegalArgumentException");
         } catch (IllegalArgumentException e) {
             // pass
@@ -1058,8 +1058,8 @@ public class FieldUtilsTest {
         assertEquals(Boolean.FALSE, FieldUtils.readDeclaredField(publiclyShadowedChild, "b"));
         FieldUtils.writeDeclaredField(publiclyShadowedChild, "i", Integer.valueOf(0));
         assertEquals(Integer.valueOf(0), FieldUtils.readDeclaredField(publiclyShadowedChild, "i"));
-        FieldUtils.writeDeclaredField(publiclyShadowedChild, "d", new Double(0.0));
-        assertEquals(new Double(0.0), FieldUtils.readDeclaredField(publiclyShadowedChild, "d"));
+        FieldUtils.writeDeclaredField(publiclyShadowedChild, "d", Double.valueOf(0.0));
+        assertEquals(Double.valueOf(0.0), FieldUtils.readDeclaredField(publiclyShadowedChild, "d"));
 
         try {
             FieldUtils.writeDeclaredField(privatelyShadowedChild, "s", "S");
@@ -1080,7 +1080,7 @@ public class FieldUtilsTest {
             // pass
         }
         try {
-            FieldUtils.writeDeclaredField(privatelyShadowedChild, "d", new Double(1.0));
+            FieldUtils.writeDeclaredField(privatelyShadowedChild, "d", Double.valueOf(1.0));
             fail("Expected IllegalArgumentException");
         } catch (IllegalArgumentException e) {
             // pass
@@ -1108,7 +1108,7 @@ public class FieldUtilsTest {
             // pass
         }
         try {
-            FieldUtils.writeDeclaredField(publicChild, "d", new Double(1.0), true);
+            FieldUtils.writeDeclaredField(publicChild, "d", Double.valueOf(1.0), true);
             fail("Expected IllegalArgumentException");
         } catch (IllegalArgumentException e) {
             // pass
@@ -1120,8 +1120,8 @@ public class FieldUtilsTest {
         assertEquals(Boolean.FALSE, FieldUtils.readDeclaredField(publiclyShadowedChild, "b", true));
         FieldUtils.writeDeclaredField(publiclyShadowedChild, "i", Integer.valueOf(0), true);
         assertEquals(Integer.valueOf(0), FieldUtils.readDeclaredField(publiclyShadowedChild, "i", true));
-        FieldUtils.writeDeclaredField(publiclyShadowedChild, "d", new Double(0.0), true);
-        assertEquals(new Double(0.0), FieldUtils.readDeclaredField(publiclyShadowedChild, "d", true));
+        FieldUtils.writeDeclaredField(publiclyShadowedChild, "d", Double.valueOf(0.0), true);
+        assertEquals(Double.valueOf(0.0), FieldUtils.readDeclaredField(publiclyShadowedChild, "d", true));
 
         FieldUtils.writeDeclaredField(privatelyShadowedChild, "s", "S", true);
         assertEquals("S", FieldUtils.readDeclaredField(privatelyShadowedChild, "s", true));
@@ -1129,8 +1129,8 @@ public class FieldUtilsTest {
         assertEquals(Boolean.FALSE, FieldUtils.readDeclaredField(privatelyShadowedChild, "b", true));
         FieldUtils.writeDeclaredField(privatelyShadowedChild, "i", Integer.valueOf(0), true);
         assertEquals(Integer.valueOf(0), FieldUtils.readDeclaredField(privatelyShadowedChild, "i", true));
-        FieldUtils.writeDeclaredField(privatelyShadowedChild, "d", new Double(0.0), true);
-        assertEquals(new Double(0.0), FieldUtils.readDeclaredField(privatelyShadowedChild, "d", true));
+        FieldUtils.writeDeclaredField(privatelyShadowedChild, "d", Double.valueOf(0.0), true);
+        assertEquals(Double.valueOf(0.0), FieldUtils.readDeclaredField(privatelyShadowedChild, "d", true));
     }
 
     @Test(expected=IllegalArgumentException.class)
